--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <main>
         <h1>Velkommen</h1>
 
-        <h3>Legg til element</h3>
-        <div>
-            <label>Tittel:</label><br>
+        <h3>Legg til film</h3>
+        <div class="form-group">
+            <label for="title">Tittel:</label>
             <input id="title" type="text">
         </div>
-        <div>
-            <label>År:</label><br>
+        <div class="form-group">
+            <label for="year">År:</label>
             <input id="year" type="text">
         </div>
-        <div>
-            <label>Bilde-URL:</label><br>
+        <div class="form-group">
+            <label for="image">Bilde-URL:</label>
             <input id="image" type="text" placeholder="URL til bilde">
         </div>
         <div class="signUpBox">
