--- a/index.html
+++ b/index.html
@@ -5,40 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Database</title>
 </head>
 
 <body>
+    <nav>
+        <a href="/index.html">Heim</a>
+        <a href="" onclick="logout();">Logg ut</a>
+    </nav>
     <main>
         <h1>Velkommen</h1>
+        <div>
+            <h3>Legg til film</h3>
+            <div class="form-group">
+                <label for="title">Tittel:</label>
+                <input id="title" type="text">
+            </div>
+            <div class="form-group">
+                <label for="year">År:</label>
+                <input id="year" type="text">
+            </div>
+            <div class="form-group">
+                <label for="image">Bilde-URL:</label>
+                <input id="image" type="text" placeholder="URL til bilde">
+            </div>
+            <div class="signUpBox">
+                <button id="btnCreate" onclick="addItem()">Legg til</button>
+            </div>
+            <div class="signUpBox">
+                <button id="btnUpdate" onclick="">Lagre endringer</button>
+            </div>
 
-        <h3>Legg til film</h3>
-        <div class="form-group">
-            <label for="title">Tittel:</label>
-            <input id="title" type="text">
+            <div id="itemTable" class="movie-container">
+
+            </div>
         </div>
-        <div class="form-group">
-            <label for="year">År:</label>
-            <input id="year" type="text">
-        </div>
-        <div class="form-group">
-            <label for="image">Bilde-URL:</label>
-            <input id="image" type="text" placeholder="URL til bilde">
-        </div>
-        <div class="signUpBox">
-            <button id="btnCreate" onclick="addItem()">Legg til</button>
+        <div>
+            <div id="userform" style="display: none;">
+                <div>
+                    <label>Tittel:</label><br>
+                    <input id="inptitle" type="text">
+                </div>
+                <div>
+                    <label>År:</label><br>
+                    <input id="inpyear" type="text">
+                </div>
+                <div>
+                    <label>Bilde-URL:</label><br>
+                    <input id="inpimage" type="text">
+                </div>
+                <button onclick="saveChanges()">Lagre endringer</button>
+            </div>
         </div>
 
-        <div id="itemTable" class="movie-container"></div>
+
     </main>
 
     <!-- Må hente inn eksterne rammeverk/bibliotek for å kunne laste inn js frå anna fil-->
     <script src="https://www.gstatic.com/firebasejs/9.6.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.3/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.3/firebase-firestore-compat.js"></script>
 
-    <script src="js/app.js"></script>
+
+    <script src="js/movies.js"></script>
+    <script src="js/logout.js"></script>
 </body>
 
 </html>
