changed edit mode

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
             <div class="signUpBox">
                 <button id="btnCreate" onclick="addItem()">Legg til</button>
             </div>
-            <div class="signUpBox">
-                <button id="btnUpdate" onclick="">Lagre endringer</button>
-            </div>
 
             <div id="itemTable" class="movie-container">
 
@@ -56,7 +53,7 @@
                     <label>Bilde-URL:</label><br>
                     <input id="inpimage" type="text">
                 </div>
-                <button onclick="saveChanges()">Lagre endringer</button>
+                <button id="btnUpdate">Lagre endringer</button>
             </div>
         </div>
 
