--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <a href="/index.html">Heim</a>
+        <a href="index.html">Heim</a>
         <a href="" onclick="logout();">Logg ut</a>
     </nav>
     <main>
